--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metis-layout",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "basic admin layout",
   "main": "Brocfile.js",
   "scripts": {
@@ -15,10 +15,7 @@
     "layout"
   ],
   "author": "Osman Nuri Okumuş <onokumus@gmail.com> (https://github.com/onokumus)",
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/metisadmin/metis-layout/blob/master/LICENSE"
-  },
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/metisadmin/metis-layout/issues"
   },
@@ -29,7 +26,7 @@
     "broccoli-funnel": "^0.2.3",
     "broccoli-less-single": "^0.4.0",
     "broccoli-merge-trees": "^0.2.1",
-    "less-plugin-autoprefix": "^1.4.1",
-    "read-package-json": "^2.0.0"
+    "broccoli-uglify-js": "^0.1.3",
+    "less-plugin-autoprefix": "^1.4.2"
   }
 }
