--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metis-layout",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "basic admin layout",
   "main": "Brocfile.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "broccoli": "^0.16.3",
     "broccoli-concat": "0.0.13",
     "broccoli-funnel": "^0.2.3",
+    "broccoli-jshint": "^0.5.6",
     "broccoli-less-single": "^0.4.0",
     "broccoli-merge-trees": "^0.2.1",
     "broccoli-uglify-js": "^0.1.3",
