--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "metis-layout",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "basic admin layout",
   "main": "Brocfile.js",
   "scripts": {
     "clean": "rm -rf ./dist",
-    "create": "broccoli build dist",
+    "create": "BROCCOLI_ENV=production broccoli build dist",
     "start": "broccoli serve",
     "build": "npm run clean && npm run create"
   },
@@ -24,12 +24,12 @@
   },
   "homepage": "https://github.com/metisadmin/metis-layout",
   "devDependencies": {
-    "broccoli": "^0.16.3",
+    "broccoli": "^0.16.4",
     "broccoli-concat": "0.0.13",
     "broccoli-funnel": "^0.2.3",
     "broccoli-jshint": "^0.5.6",
     "broccoli-less-single": "^0.4.0",
-    "broccoli-merge-trees": "^0.2.1",
+    "broccoli-merge-trees": "^0.2.2",
     "broccoli-uglify-js": "^0.1.3",
     "less-plugin-autoprefix": "^1.4.2"
   }
